salesforce_ant_45.0/sample/codepkg/objects/Product_AddOns__c.object
<CustomObject>
    <fields>
        <fullName>AddOns_Mongo_Id__c</fullName>
        <label>AddOns Mongo Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products AddOns</relationshipLabel>
        <relationshipName>Products_AddOns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_AddOns_Id__c</fullName>
        <label>Store AddOns Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product AddOn</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AddOns_Mongo_Id__c</columns>
        <columns>Price__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AddOns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products AddOns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>